8228420: compile error in shenandoahSupport.cpp with clang 9

Reviewed-by: shade